added a new project on my portfolio

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
                     <h5>Rock Paper Scissors Mini Project (HTML, Javascript)</h5>
                     <img class="rpsimg" src="https://www.science.org/do/10.1126/science.aac4663/full/sn-rockpaper.jpg" alt="Rock Paper Scissors">
                 </div></a>
+                <a href="https://kimmh891223.github.io/next_city/"><div class="rps">
+                    <h5>Next City Project (HTML, CSS, Javascript, Server-side API, Group Project)</h5>
+                    <img class="nextCityImg" src="./next_city.jpg" alt="random travel app">
+                </div></a>
         </div>
         <div class="contactme"><a id="contactmelvl"></a>
             <h3 id="contactmetitle">Contact Me</h3>
