--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                     <h5>Next City Project (HTML, CSS, Javascript, Server-side API, Group Project)</h5>
                     <img class="nextCityImg" src="./next_city.jpg" alt="random travel app">
                 </div></a>
+                <a href="https://swiftexchange-c3d0475c88b3.herokuapp.com/"><div class="rps">
+                    <h5>SwiftExchange Market Place (Handlebars, CSS, Javascript, Express, Node, SQL, Group Project)</h5>
+                    <img class="nextCityImg" src="./swiftexchange.jpg" alt="market place app">
+                </div></a>
         </div>
         <div class="contactme"><a id="contactmelvl"></a>
             <h3 id="contactmetitle">Contact Me</h3>
